# Retail-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agents/retail_analytics/: graph.py  messages.py  nodes.py  prompts.py  routes.py  schemas.py  state.py  tools.py  types.py
agents/retail_analytics/services/: bigquery_client.py  pii_masker.py  sql_validator.py
agents/retail_analytics/tools/: bigquery_client.py  sql_validator.py
app/: cli.py
core/: llm.py  settings.py
docs/: ARCHITECTURE.md  REQUIREMENTS.md
