[project]
name = "retail-agent"
version = "0.1.0"
description = "CLI prototype for a retail analytics assistant."
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
