[project]
name = "retail-agent"
version = "0.1.0"
description = "CLI prototype for a retail analytics assistant."
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-cloud-bigquery==3.42.1",
    "langchain==1.3.11",
    "langchain-google-genai==4.2.5",
    "langgraph==1.2.6",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlglot==30.11.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.18",
    "pyright==1.1.410",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]  # ANN = enforce type annotations

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
